# unifi-mcp-server

./: .bandit  .cursorrules  .dockerignore  .git-steer-cve-fixes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Commands.rtf  Dockerfile  LICENSE  NETWORK_PLAYBOOK.md  PROJECT_REVIEW.md  README.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_FIXES_REQUIREMENTS.txt  TROUBLESHOOTING.md  add_type_hints.py  agent-card.json  benchmark_performance.py  commands.md  docker-compose.yml  main-v1.2.py  main.py  mypy.ini  pyproject.toml  pytest.ini  roadmap.md  safety-policy.yml  secrets.env  secrets.env.example  test_credentials.py  unifi-mcp.service  working.py
.github/: dependabot.yml
.github/workflows/: claude.yml  docker-build-push.yml
tests/: __init__.py  mock_unifi.py  test_integration_auth.py  test_integration_errors.py  test_rate_limiting.py  test_sanitization.py  test_validation.py
