[project]
name = "mcp-server-unifi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "memory-profiler>=0.61.0",
]
