[project]
name = "unifi-mcp-server"
version = "0.1.1"
description = "Comprehensive Infrastructure Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.0",
    "requests>=2.33.0",
    "urllib3>=2.6.3",
    "starlette>=0.49.1",
    "h11>=0.16.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "cryptography>=46.0.7",
    "Pygments>=2.20.0",
]